--- a/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
@@ -137,13 +137,13 @@
     opacity: 0;
     display: block;
     visibility: hidden;
-    transform: translateY(var(--y, -16px));
+    transform: translateY(var(--y1, -16px));
     transition: transform 0.2s ease, opacity 0.275s ease-out;
     will-change: transform;
 
     &.show {
         visibility: visible;
-        transform: translateY(0);
+        transform: translateY(var(--y2, 0));
         opacity: 1;
     }
 }
