New CSS selector with low specificity --> button:where(.reset)

--- a/src/Smartstore.Web/Views/Shared/Components/CurrencySelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/CurrencySelector/Default.cshtml
@@ -10,7 +10,7 @@
 }
 
 <div class="dropdown">
-    <button id="currency-selector" class="menubar-link btn btn-link" data-toggle="dropdown" aria-haspopup="listbox" aria-expanded="false">
+    <button id="currency-selector" class="menubar-link reset" data-toggle="dropdown" aria-haspopup="listbox" aria-expanded="false">
         <span aria-hidden="true">@activeCurr.ISOCode</span>
         <span aria-hidden="true" class="lrm">(@activeCurr.Symbol)</span>
         <span class="sr-only">
