--- a/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
@@ -12,7 +12,7 @@
 }
 
 <div class="dropdown">
-    <button id="language-selector" type="button" class="menubar-link btn btn-link" data-toggle="dropdown" aria-haspopup="listbox" aria-expanded="false">
+    <button id="language-selector" type="button" class="menubar-link reset" data-toggle="dropdown" aria-haspopup="listbox" aria-expanded="false">
         <span aria-hidden="true">@activeLang.UniqueSeoCode.ToUpper()</span>
         <span class="sr-only">
             @T("Aria.Label.LanguageSelector", activeLang.LocalizedShortName)
