--- a/src/Smartstore.Web/Themes/Flex/wwwroot/theme.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/theme.scss
@@ -69,6 +69,7 @@
 
 @import '/shared/mixins';
 @import '/shared/spacing';
+@import '/shared/accessibility';
 @import '/shared/typo';
 @import '/shared/fa'; 
 @import '/shared/alert';
