--- a/src/Smartstore.Web/wwwroot/admin/theme.scss
+++ b/src/Smartstore.Web/wwwroot/admin/theme.scss
@@ -48,6 +48,7 @@
 // --------------------------------------------------
 
 @import '../shared/spacing';
+@import '../shared/accessibility';
 @import '../shared/fa';
 @import '../shared/bootstrap-icons';
 @import '../shared/typo';
