--- a/src/Smartstore.Web/Views/Shared/Components/Menu/Navbar.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Menu/Navbar.cshtml
@@ -47,7 +47,9 @@
 
 <div class="cms-menu cms-menu-navbar" data-menu-name="@(Model.Name?.ToLower())">
     <div class="megamenu-nav megamenu-nav--prev @(rtl ? "omega" : "alpha")">
-        <a href="#" class="megamenu-nav-btn btn btn-icon"><i class="far fa-chevron-left"></i></a>
+        <a href="#" class="megamenu-nav-btn btn btn-clear-dark btn-icon rounded-circle">
+            <i class="far fa-chevron-left megamenu-nav-btn-icon"></i>
+        </a>
     </div>
 
     <ul class="navbar-nav nav flex-row flex-nowrap" id="menu-main" role="menubar">
@@ -138,6 +140,8 @@
     </ul>
 
     <div class="megamenu-nav megamenu-nav--next @(rtl ? "alpha" : "omega")">
-        <a href="#" class="megamenu-nav-btn btn btn-icon"><i class="far fa-chevron-right"></i></a>
+        <a href="#" class="megamenu-nav-btn btn btn-clear-dark btn-icon rounded-circle">
+            <i class="far fa-chevron-right megamenu-nav-btn-icon"></i>
+        </a>
     </div>
 </div>
