--- a/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/mixins/_buttons.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/mixins/_buttons.scss
@@ -125,8 +125,6 @@
 }
 
 @mixin button-focus-visible() {
-  $ow: cssmax(0px, $btn-focus-width - 1px);
-  outline: #{$ow} solid $input-focus-border-color;
-  outline-offset: calc(#{$ow} * -1);
+  outline: 0;
   box-shadow: #{$btn-focus-box-shadow};
 }
