--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -108,6 +108,12 @@ $embed-responsive-aspect-ratios: (
     (1 1) 
 );
 
+$focus-ring-width:            2px !default;
+$focus-ring-opacity:          1 !default;
+$focus-ring-color:            rgba(var(--link-color-rgb), $focus-ring-opacity) !default;
+$focus-ring-blur:             0 !default;
+$focus-ring-box-shadow:       0 0 $focus-ring-blur $focus-ring-width $focus-ring-color, inset 0 0 0 $focus-ring-width hsla(0,0%,100%, 0.92) !default;
+
 $transition-base:             all 0.125s ease-in-out !default;
 
 
@@ -167,7 +173,8 @@ $input-transition:            none !default;
 
 // Buttons
 
-$btn-active-box-shadow:			inset 0 3px 5px rgba($black, .125);
+$btn-active-box-shadow:			inset 0 3px 5px rgba($black, .125) !default;
+$btn-focus-box-shadow:          $focus-ring-box-shadow !default;
 $btn-transition:                color .1s ease-in-out, background-color .1s ease-in-out, border-color .1s ease-in-out, box-shadow .1s ease-in-out !default;
 $btn-disabled-opacity:          0.5 !default;
 
@@ -258,7 +265,6 @@ $modal-content-box-shadow-sm-up:    var(--box-shadow-lg) !default;
 // Navs
 
 $nav-pills-link-active-color:       $white;
-$nav-link-focus-box-shadow:         none;
 
 
 // Close
