WCAG: Footer (key navigation for mobile tabs is not implemented yet)

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_footer.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_footer.scss
@@ -91,6 +91,9 @@
 }
 
 @include media-breakpoint-up(md) {
+    .footer-title {
+        pointer-events: none !important;
+    }
     .footer-bottom {
         margin-top: 1rem;
     }
