--- a/src/Smartstore.Web/Views/Shared/Components/StoreThemeSelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/StoreThemeSelector/Default.cshtml
@@ -20,7 +20,7 @@
             name="themeName" 
             asp-items="items"
             class="store-theme-list noskin form-control rounded-pill shadow-xs" 
-            aria-labelledby="theme-selector-header"></select>
+            aria-labelledby="theme-selector-heading"></select>
     @*TODO: (wcag) (mg) Set feedback panel to role=status instead and leave code comment to refer to SC 3.2.2 / 4.1.3 in case of negative audits *@
 </form>
 
