Area "admin" -> "Admin"

--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Partials/FontAwesomeIcon.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Partials/FontAwesomeIcon.cshtml
@@ -13,7 +13,7 @@
         <select class="fa-icon-chooser noskin"
                 id="@Html.IdFor(x => x.Icon)"
                 name="@Html.NameFor(x => x.Icon)"
-                data-explorer-url="@Url.Action("SearchIcons", "Theme", new { area = "admin" })"
+                data-explorer-url="@Url.Action("SearchIcons", "Theme", new { area = "Admin" })"
                 data-icon-cols="2"
                 data-placeholder="@T("Common.Unspecified")">
             <option></option>
