--- a/src/Smartstore.Modules/Smartstore.OfflinePayment/Views/Shared/Components/ManualPayment/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.OfflinePayment/Views/Shared/Components/ManualPayment/Default.cshtml
@@ -2,45 +2,56 @@
 
 <input type="hidden" name="OfflinePaymentMethodType" value="Manual" />
 
-<div class="opt-form">
-    <div class="form-group row">
-        <label asp-for="CreditCardTypes" class="col-md-3 col-form-label required"></label>
-        <div class="col-md-9">
-            <select asp-for="CreditCardType" asp-items="@Model.CreditCardTypes" class="form-control noskin"></select>
+<fieldset>
+    <legend class="sr-only">@T("Plugins.FriendlyName.Payments.Manual")</legend>
+    <div class="opt-form">
+        <div class="form-group row">
+            <label asp-for="CreditCardTypes" class="col-md-3 col-form-label required"></label>
+            <div class="col-md-9">
+                <select asp-for="CreditCardType" asp-items="@Model.CreditCardTypes" class="form-control noskin"></select>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label asp-for="CardholderName" class="col-md-3 col-form-label required"></label>
-        <div class="col-md-9">
-            <input asp-for="CardholderName" />
-            <span asp-validation-for="CardholderName"></span>
+        <div class="form-group row">
+            <label asp-for="CardholderName" class="col-md-3 col-form-label required"></label>
+            <div class="col-md-9">
+                <input asp-for="CardholderName" />
+                <span asp-validation-for="CardholderName"></span>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label asp-for="CardNumber" class="col-md-3 col-form-label required"></label>
-        <div class="col-md-9">
-            <input asp-for="CardNumber" />
-            <span asp-validation-for="CardNumber"></span>
+        <div class="form-group row">
+            <label asp-for="CardNumber" class="col-md-3 col-form-label required"></label>
+            <div class="col-md-9">
+                <input asp-for="CardNumber" />
+                <span asp-validation-for="CardNumber"></span>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label asp-for="ExpireMonth" class="col-md-3 col-form-label required"></label>
-        <div class="col-md-9">
-            <div class="row sm-gutters">
-                <div class="col-6">
-                    <select asp-for="ExpireMonth" asp-items="@Model.ExpireMonths" class="form-control noskin"></select>
-                </div>
-                <div class="col-6">
-                    <select asp-for="ExpireYear" asp-items="@Model.ExpireYears" class="form-control noskin"></select>
+        <div class="form-group row">
+            <label id="manual-payment-expire-label" asp-for="ExpireMonth" class="col-md-3 col-form-label required"></label>
+            <div class="col-md-9">
+                <div class="row sm-gutters">
+                    <div class="col-6">
+                        <span id="manual-payment-expire-month" class="sr-only">@T("Common.Month")</span>
+                        <select asp-for="ExpireMonth" 
+                                asp-items="@Model.ExpireMonths" 
+                                class="form-control noskin" 
+                                aria-labelledby="manual-payment-expire-label manual-payment-expire-month"></select>
+                    </div>
+                    <div class="col-6">
+                        <span id="manual-payment-expire-year" class="sr-only">@T("Common.Year")</span>
+                        <select asp-for="ExpireYear" 
+                                asp-items="@Model.ExpireYears" 
+                                class="form-control noskin" 
+                                aria-labelledby="manual-payment-expire-label manual-payment-expire-year"></select>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label asp-for="CardCode" class="col-md-3 col-form-label required"></label>
-        <div class="col-md-9">
-            <input asp-for="CardCode" />
-            <span asp-validation-for="CardCode"></span>
+        <div class="form-group row">
+            <label asp-for="CardCode" class="col-md-3 col-form-label required"></label>
+            <div class="col-md-9">
+                <input asp-for="CardCode" />
+                <span asp-validation-for="CardCode"></span>
+            </div>
         </div>
     </div>
-</div>
+</fieldset>
